implemented last changes & code analysis with sonarlint